samples/fail/array_init_unsupported.c
int main() {
    int nums[3] = 1;
    return 0;
}
